fix: z-index: 1 for all popups

--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -17,6 +17,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1;
   display: none;
 }
 
@@ -30,6 +31,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1;
   display: none;
 }
 
@@ -43,5 +45,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1;
   display: none;
 }
